wrote the css for our website and changed some html

--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
     <title>Wreck it Ralph</title>
         <link rel="icon" href="img/ralph-avatar.jpg">
+        <link rel="stylesheet" type="text/css" href="css/hero.css">
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- header element -->
     <header>
         <img src="img/ralph-avatar.jpg">
         <h1>Wreck-it Ralph</h1>
+        
     </header>
 <!-- main element -->
     <main>
         <H2>About Ralph</H2>
         <p> Ralph is some charachter this dude is talking about i dont care</p>
         <img src="img/ralph-big.jpg">
-        <p>Ralph and his friends</p>
+        <p class="caption"> Ralph and his friends</p>
 
     <h2>Ralph's charachtersitics</h2>    
         <ol>
