--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- main element -->
     <main>
         <H2>About Ralph</H2>
-        <p> Ralph is some charachter this dude is talking about i dont care</p>
+        <p> Ralph is some charachter i've never heard of before</p>
         <img src="img/ralph-big.jpg">
         <p class="caption"> Ralph and his friends</p>
 
